--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "watermelon-pizza",
   "version": "1.0.0",
   "description": "My personal website!!",
-  "main": "index.js",
   "dependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "fs-extra": "^2.0.0",
     "gulp": "^3.9.1",
+    "gulp-banner": "^0.1.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1",
+    "gulp-uglifycss": "^1.0.6",
+    "webpack-clear-console": "^1.0.3",
     "webpack-stream": "^3.2.0"
   },
   "scripts": {
