--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "extract-zip": "^1.6.0",
     "fs-extra": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-banner": "^0.1.3",
@@ -13,6 +14,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1",
     "gulp-uglifycss": "^1.0.6",
+    "inly": "^1.0.2",
     "webpack-clear-console": "^1.0.3",
     "webpack-stream": "^3.2.0"
   },
