--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@babel/preset-env": "^7.0.0-beta.49",
 		"babel-loader": "^8.0.0-beta.3",
 		"concurrently": "^3.5.1",
+		"cssnano": "^3.10.0",
 		"express": "^4.16.3",
 		"extract-zip": "^1.6.7",
 		"fs-extra": "^6.0.1",
@@ -21,9 +22,9 @@
 	"scripts": {
 		"install": "npm run make",
 		"make":
-			"concurrently \"npm run static\" \"npm run css -- -m false\" \"npm run js\" \"node etc/unpack.js\"",
+			"concurrently \"npm run static\" \"npm run css -- --no-map\" \"npm run js\" \"node etc/unpack.js\"",
 		"watch":
-			"concurrently \"npm run css -- -w\" \"npm run js -- -w\" \"npm run static\" \"npm run express\"",
+			"concurrently \"npm run css -- -w\" \"npm run js -- -w --mode=development\" \"npm run static\" \"npm run express\"",
 		"css": "postcss css/app.css -o out/watermelon.css",
 		"js": "webpack",
 		"static": "node etc/build.js",
