--- a/package.json
+++ b/package.json
@@ -3,29 +3,18 @@
   "version": "1.0.0",
   "description": "My personal website!!",
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "babel-loader": "^8.0.0-beta.3",
-    "concurrently": "^3.5.1",
-    "cssnano": "^3.10.0",
-    "express": "^4.16.3",
     "extract-zip": "^1.6.7",
     "fs-extra": "^6.0.1",
     "parcel": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.2.1",
-    "postcss": "^6.0.22",
-    "postcss-cli": "^5.0.0",
-    "postcss-import": "^11.1.0",
-    "postcss-nesting": "^5.0.0",
-    "sass": "^1.3.2",
-    "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4"
+    "parcel-plugin-static-files-copy": "^2.2.1"
   },
   "staticFiles": {
     "staticPath": "static",
     "watcherGlob": "**"
   },
-  "browserslist": ["Chrome 78"],
+  "browserslist": [
+    "last 1 Chrome version"
+  ],
   "scripts": {
     "install": "npm run make",
     "make": "parcel build src/index.html -d out && node etc/unpack.js",
