--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://bitbucket.org/walaura/lauragonzalez.cc#readme",
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "cssnano": "^4.1.10"
   }
 }
