--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "@babel/core": "^7.7.5",
     "extract-zip": "^1.6.7",
     "fs-extra": "^6.0.1",
-    "parcel": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.2.1"
+    "parcel": "^1.12.4"
   },
   "staticFiles": {
     "staticPath": "static",
@@ -31,6 +30,7 @@
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
-    "cssnano": "^4.1.10"
+    "cssnano": "^4.1.10",
+    "parcel-plugin-static-files-copy": "^2.2.1"
   }
 }
