--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
     "cssnano": "^4.1.10",
+    "parcel-plugin-imagemin": "^3.0.0",
     "parcel-plugin-static-files-copy": "^2.2.1"
   }
 }
