--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@babel/core": "^7.7.5",
     "extract-zip": "^1.6.7",
     "fs-extra": "^6.0.1",
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "prettier": "^1.19.1"
   },
   "staticFiles": {
     "staticPath": "static",
