--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@babel/core": "^7.7.5",
     "extract-zip": "^1.6.7",
     "fs-extra": "^6.0.1",
+    "gatsby": "^2.18.17",
+    "gatsby-plugin-react-helmet": "^3.1.18",
     "parcel": "^1.12.4",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
   },
   "staticFiles": {
     "staticPath": "static",
@@ -19,7 +24,7 @@
   "scripts": {
     "install": "npm run make",
     "make": "parcel build src/index.html -d out && node etc/unpack.js",
-    "start": "parcel src/index.html -d out"
+    "start": "gatsby develop"
   },
   "repository": {
     "type": "git",
