--- a/package.json
+++ b/package.json
@@ -8,15 +8,10 @@
     "fs-extra": "^6.0.1",
     "gatsby": "^2.18.17",
     "gatsby-plugin-react-helmet": "^3.1.18",
-    "parcel": "^1.12.4",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
-  },
-  "staticFiles": {
-    "staticPath": "static",
-    "watcherGlob": "**"
   },
   "browserslist": [
     "last 1 Chrome version"
@@ -35,9 +30,6 @@
   "homepage": "https://bitbucket.org/walaura/lauragonzalez.cc#readme",
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-runtime": "^6.26.0",
-    "cssnano": "^4.1.10",
-    "parcel-plugin-imagemin": "^3.0.0",
-    "parcel-plugin-static-files-copy": "^2.2.1"
+    "babel-runtime": "^6.26.0"
   }
 }
