--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   ],
   "scripts": {
     "install": "npm run make",
-    "make": "parcel build src/index.html -d out && node etc/unpack.js",
+    "make": "gatsby build && node etc/unpack.js",
     "start": "gatsby develop"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://walaura@bitbucket.org/walaura/lauragonzalez.cc.git"
+    "url": "git+https://github.com/walaura/watermelon-pizza"
   },
   "author": "Laura Mayhem",
   "license": "IT MINE",
-  "homepage": "https://bitbucket.org/walaura/lauragonzalez.cc#readme",
+  "homepage": "https://github.com/walaura/watermelon-pizza",
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0"
