--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "last 1 Chrome version"
   ],
   "scripts": {
-    "install": "npm run make",
+    "install": "npm run make --openssl-legacy-provider",
     "make": "gatsby build && node etc/unpack.js",
     "start": "gatsby develop"
   },
