--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "1.0.0",
   "description": "My personal website!!",
   "dependencies": {
+    "@babel/core": "^7.7.5",
     "extract-zip": "^1.6.7",
     "fs-extra": "^6.0.1",
-    "gatsby": "^2.18.17",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "parcel": "^1.12.4",
+    "prettier": "^1.19.1"
+  },
+  "staticFiles": {
+    "staticPath": "static",
+    "watcherGlob": "**"
   },
   "browserslist": [
-    "last 1 Chrome version"
+    "last 10 Chrome versions"
   ],
   "scripts": {
-    "install": "npm run make --openssl-legacy-provider",
-    "make": "gatsby build && node etc/unpack.js",
-    "start": "gatsby develop"
+    "install": "npm run make",
+    "make": "parcel build src/index.html -d out && node etc/unpack.js",
+    "start": "parcel src/index.html -d out"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,10 @@
   "license": "IT-MINE",
   "homepage": "https://github.com/walaura/watermelon-pizza",
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
+    "cssnano": "^4.1.10",
+    "parcel-plugin-imagemin": "^3.0.0",
+    "parcel-plugin-static-files-copy": "^2.2.1"
   }
 }
