--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
   "homepage": "https://github.com/walaura/watermelon-pizza",
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-runtime": "^6.26.0",
-    "cssnano": "^7.0.6",
-    "parcel-plugin-imagemin": "^4.0.2"
+    "babel-runtime": "^6.26.0"
   }
 }
