--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "parcel": "^2.12.0",
     "parcel-reporter-static-files-copy": "^1.5.3",
     "prettier": "^1.19.1"
+    "svgo": "^3.3.2"
   },
   "staticFiles": {
     "staticPath": "static",
